--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gamer Zone</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="./images/Frame.png " alt="">
+                    <p>
+                        <span class="section">G</span>amer
+                    </p>
+                </div>
+                <div class="nav-item-container">
+                    <a href="">About Us</a>
+                    <a href="">Developer</a>
+                    <a href="" class="login-bt">
+                        <div>
+                            Follow Us On 
+
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-youtube" style="color: red;margin-right: 24px;"></i>
+                                <i class="fa-brands fa-tiktok"
+                                style=" background-image: linear-gradient(to bottom,#08FFF9,#F00044,);-webkit-background-clip: text ;"></i>
+                        </div>
+
+                        </i>
+
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- nav done -->
+    <main>
+         
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
