--- a/index.html
+++ b/index.html
@@ -46,7 +46,36 @@
     </header>
     <!-- nav done -->
     <main>
-         
+         <!-- Play Like The start -->
+         <section class="play">
+            <div class="play-container">
+                <div class="Play-text">
+                    <p>Play Like The</p>
+                    <h1>G.O.A.T.</h1>
+                    <div>
+                     <ul>
+                        <li href="">
+                            
+                            1-Click instant play
+                        </li>
+                        <li href="">
+                            No Download
+                        </li>
+                        <li href="">
+                            1000s of supported online games
+                        </li>
+                     </ul>
+                    </div>
+                    <button>Sign In</button>
+                    <button>Go Rogue</button>
+   
+               </div>
+               <div class="Play-img">
+                     <img src="./images/Group 18.png" alt="">
+               </div>
+            </div>
+         </section>
+         <!-- Play Like The end -->
     </main>
     <footer>
 
