--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer Zone</title>
+    <title>Gamer</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/responsive.css">
 
@@ -55,19 +55,21 @@
                     <div>
                      <ul>
                         <li href="">
-                            
+                            <i class="fa-regular fa-circle-play" style="color: #F948B2;"></i>
                             1-Click instant play
                         </li>
                         <li href="">
+                            <i class="fa-solid fa-download"style="color:#F948B2;"></i>
                             No Download
                         </li>
                         <li href="">
+                            <i class="fa-solid fa-user-group" style="color: #F948B2;"></i>
                             1000s of supported online games
                         </li>
                      </ul>
                     </div>
-                    <button>Sign In</button>
-                    <button>Go Rogue</button>
+                    <button class="btn-1">Sign In</button>
+                    <button class="btn-2">Go Rogue</button>
    
                </div>
                <div class="Play-img">
@@ -76,6 +78,61 @@
             </div>
          </section>
          <!-- Play Like The end -->
+
+         <!-- we are gamer start -->
+
+         <section class="w">
+             <div class="we">
+                <div class="we-img">
+                    <img src="./images/pngwing 4.png" alt="">
+                </div>
+                <div class="we-container">
+                      <h2>We are gamer</h2>
+                      <p>An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br> mobile games. We reach over 400 million players each <br>month and our audience keeps growing.</p>
+                      <button class="btn-1">know more</button>
+                      <div>
+                        <p>Our purpose...</p>
+                        <h3>“unleash the gamer in everyone”</h3>
+                      </div>
+                </div>
+             </div>
+         </section>
+
+         <!-- we are gamer end -->
+
+         <!-- Online Games Funny Videos start -->
+
+         <section class="onl">
+              <div class="onl-container">
+                <h2>Online Games <span class="fun">Funny Videos</span> </h2>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="onl-section">
+                    <div class="primary">
+                       <img src="./images/Rectangle 4.png" alt="">
+                       <p>No Download. No Installs. Play <br>games Instantly on Gamer.</p>
+                    </div>
+                    <div class="primary">
+                       <img src="./images/Rectangle 5.png" alt="">
+                       <p>Did you score? #unblockedgames <br> #school</p>
+                    </div>
+                    <div class="primary">
+                       <div class="back">
+                           <a href=""><i class="fa-solid fa-circle-play" style="color: white;"></i></a>
+                          <!-- <p>Watch Now</p>  -->
+                       </div>
+                       <p>Breaking game records <br> like OG</p>
+                    </div>
+                    <div class="primary">
+                        <img src="./images/Rectangle 6.png" alt="">
+                        <p>Busted gaming on school laptop, <br> but you are still lit.</p>
+                    </div>
+                </div>
+              </div>
+         </section>
+
+         <!--Online Games Funny Videos end -->
+
+
     </main>
     <footer>
 
