--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
+    <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/responsive.css">
 
@@ -131,6 +132,26 @@
          </section>
 
          <!--Online Games Funny Videos end -->
+         
+
+         <!-- Play Instantly start -->
+          <section class="p">
+            <div class="play-instantly">
+                <div class="play-left">
+                    <h3><span class="fun">Play Instantly, </span>
+                        No Downloads 
+                        No Installs.</h3>
+                    <p>Play games online for free without  downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="play-right">
+                   <img class="img-1" src="./images/Rectangle 55.png" alt="">
+                   <img class="img-2" src="./images/Rectangle 66.png" alt="">
+                    
+                </div>
+            </div>
+          </section>
+
+         <!-- Play Instantly end -->
 
 
     </main>
